# otus-cpp-hw_08

./: .travis.yml  CMakeLists.txt  main.cpp  readme.md
files/: filestructure.h
hash/: crc32hash.cpp  crc32hash.h  hashholder.h  ihash.h
samefs_searcher/: bayansearcher.cpp  bayansearcher.h
